<resources>
   <string name="url">http://107.109.144.13/SalesCatalyst-Service/SalesCatalyst.svc/</string>
    <string name="url_file_processor_consolebase">http://107.110.101.188/SaleCatalystService_Dev/FileProcessor.ashx?</string>
    <string name="url_file_processor_servicebase">http://107.110.101.188/SaleCatalystService_Dev/FileProcessor.ashx?</string>
    <string name="webview_image_from_replace"><Data><![CDATA[ <img src=\"/SmartDost_Ce_Dev/]]></Data></string>
    <string name="webview_image_to_url"><Data><![CDATA[ <img src=\"http://107.110.101.188/SmartDost_Ce_Dev/]]></Data></string>
    <string name="expense_image_base_url">http://107.110.101.188/SaleCatalystService_Dev/Contents/ExpenseFiles/</string>
 <string name="app_name">Sales Catalyst</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="summary">Summary</string>
    <string name="save">Save</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="intializing">Initializing...</string>
    <string name="title_user_profile">User Profile</string>
    <string name="emp_name">First name</string>
    <string name="emp_last_name">Last name</string>
    <string name="emp_Email">E-Mail</string>
    <string name="emp_alternate_email">Alter. E-mail</string>
    <string name="emp_mobile_calling">Mobile1</string>
    <string name="emp_mobile_sd">Mobile2</string>
    <string name="emp_address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="emp_photo">Upload your photo</string>
    <string name="enter_name_msg">First name can\'t be blank.</string>
    <string name="enter_last_name_msg">Last name can\'t be blank.</string>
    <string name="enter_email_msg">E-mail can\'t be blank.</string>
    <string name="enter_mobile_msg">Mobile no. should be 10 digit.</string>
    <string name="enter_address_msg">Address can\'t be blank.</string>
    <string name="enter_pincode_msg">Pincode should be min. 6 digit</string>
    <string name="invalidemail">Enter valid email</string>
    <string name="enter_store_manager_name">Enter Store Manager Name</string>
    <string name="kas">KAS</string>
    <string name="pin">Pin</string>
    <string name="invalidpin_lowecase">Pin number is not valid. It should contain a lower case character. </string>
    <string name="invalidpin_length">Pin number is not valid. Pin length should be minimum of 10 characters. </string>
    <string name="invalidpin_digit">Pin number is not valid.It should contain a digit. </string>
    <string name="invalidpin_special_character">Pin number is not valid. It should contain a special character. </string>
    <string name="invalidpin_uppercase">Pin number is not valid. It should contain a uppercase character. </string>
    <string name="invalid_identical">consecutive identical input is not valid. It should not contain 3 consecutive identical input. </string>
    <string name="invalidpin_space">Pin number is not valid. It should not contain space. </string>
    <string name="reset_pin">Reset Pin</string>
    <string name="forgetpin">Forgot your pin?</string>
    <string name="registerPin">Register Pin</string>
    <string name="login">Login</string>
    <string name="loadingmessage">loading Please Wait &#8230;</string>
    <string name="networkserverbusy">Server Busy &#8230;</string>
    <string name="info">For technical support, Please call helpdesk on 18001083366 between 9:30am to 6:30pm.</string>
    <string name="mainmenu">Home</string>
    <string name="attendance">Attendance</string>
    <string name="selectleave">Select Nos Leaves</string>
    <string name="marketworking">Market Working</string>
    <string name="activitymodule">Activity</string>
    <string name="newdealerstore">New Dealer Store</string>
    <string name="outletworking">Store Working</string>
    <string name="mytodays">My TODAYS</string>
    <string name="mymtd">My MTD</string>
    <string name="myytd">My YTD</string>
    <string name="mtd">MTD</string>
    <string name="lmtd">LMTD</string>
    <string name="geotag">Dealer Board</string>
    <string name="bookorder">Book Order</string>
    <string name="competition">Retail Index</string>
    <string name="csaudit">CS Audit</string>
    <string name="officetraining">Office/Training</string>
    <string name="posmtracking">POSM Tracking</string>
    <string name="retailaudit">Retail Audit</string>
    <string name="visitordetails">Visitor Details</string>
    <string name="collection">Collection</string>
    <string name="channelhygiene">Channel Hygiene</string>
    <string name="gotobeat">Goto Beat</string>
    <string name="displaybeats">Display Beats</string>
    <string name="selectdealer">Select Dealer</string>
    <string name="storestatus">Store Status</string>
    <string name="logout">Logout</string>
    <string name="enterpin">Ener your pin</string>
    <string name="enterpassword">Ener password</string>
    <string name="error1">Network Error</string>
    <string name="error2">Internet Not Available</string>
    <string name="error3">Alert!</string>
    <string name="error4">Enable Gps And Network Location</string>
    <string name="error5">Location Not Available Try again!</string>
    <string name="error6">Image Not Clicked</string>
    <string name="error7">Error</string>
    <string name="error8">Fill some data</string>
    <string name="error9">Select Attendance</string>
    <string name="error10">Message</string>
    <string name="error11">Unsaved data will be lost if you switch screen.</string>
    <string name="error12">Are you sure you want to quit?</string>
    <string name="error13">Select some dates from calender</string>
    <string name="error15">Unable to create Geo Tag of store, Make sure SD card inserted properly</string>
    <string name="datasave">Data saved Successfully.</string>
    <string name="datasubmit">Last Store data submitted successfully.</string>
    <string name="datanotsubmit">Last Store data Upload failed Retry again!</string>
    <string name="datasubmit_sync">Store data submitted successfully.</string>
    <string name="datanotsubmit_sync">Store data Upload failed Retry again!</string>
    <string name="Nodata">No Data Available to Upload.</string>
    <string name="confirmdatasave">You want to Save data.</string>
    <string name="confirmdatasubmit">Sure want to submit data.</string>
    <string name="server_not_responding">Server not responding, please try again later.</string>
    <string name="sucess">Success!</string>
    <string name="PREFERENCE_NAME">"pref_samsung"</string>
    <string name="username">UserName</string>
    <string name="attendanceoption1">MEETING or MARKET</string>
    <string name="attendanceoption2">LEAVE or OFF</string>
    <string name="noofleaves">Nos. Of Leaves</string>
    <string name="update">Update</string>
    <string name="sample_image_tag">Sample Image Tag</string>
    <string name="reports">Reports</string>
    <string name="dealerboard">Dealer Board</string>
    <string name="questionoftheday">Question Of The Day</string>
    <string name="partnerquestions">Partner Question</string>
    <string name="comingsoon">Coming soon &#8230;</string>
    <string name="sync_data">You did not sync data to server. Sync the data before continue other beat.</string>
    <string name="save_msg">Unsaved data will not be considered for server syncing. Are you sure want to continue?</string>
    <string name="cancel_msg">Please click on Proceed button to make effect on data. Sure want to continue?</string>
    <string name="refresh_msg">This action will reload all the masters, and Logout. </string>
    <string name="retail_msg">You have not answered all questions of Mandatory SPP Retail Index. Answer all question else store would not be considered as Covered.</string>
    <string name="apk_update_msg">SmarDost updated version is available. Press Ok to continue..</string>
    <string name="confirmationid">Employee Id</string>
    <string name="newpassword">New Pin</string>
    <string name="reenterpassword">Re-Enter Pin</string>
    <string name="insertsim">please Enter sim then try again !</string>
    <string name="pinnotmatch">Pin number not match</string>
    <string name="fields_can_not_blank">Fields can not be blank</string>
    <string name="comments">Enter Your Comment</string>
    <string name="updatingcomments">Uploading data Please Wait &#8230;</string>
    <string name="city">City</string>
    <string name="partnerdetails">Partner Details</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="upload_photo">Upload Image</string>
    <string name="fetchinglocation">Getting Location &#8230;</string>
    <string name="unable_to_create_geo_tag">Unable to create Geo Tag of store, make sure SD card inserted properly.</string>
    <string name="need_to_capture_pic">Need to capture pics of store.</string>
    <string name="title_calender">Select Market/Weekly Off</string>
    <string name="leave">Leave</string>
    <string name="weekly_off">Market/Weekly Off</string>
    <string name="select_planed_beats">Coverage date</string>
    <string-array name="dealer_type">
        <item>Select</item>
        <item>Parent</item>
        <item>Child</item>
    </string-array>
    <string name="dealer_type_spinner">Dealers Type </string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="title_partner_selection">Partner Selection</string>
    <string name="contactPerson">Contact Person</string>
    <string name="contactMobile">Contact Mobile</string>
    <string name="contactEmail">Contact Email</string>
    <string name="lastVisitedInfo">Last Visited Info</string>
    <string name="targetAchivement">Target Achivevement</string>
    <string name="lastVisitedSummary">Last Visited Summary</string>
    <string name="next">Next</string>
    <string name="entercontactpersonname">Please Enter Contact Person Name</string>
    <string name="entercontactmobilenumber">Please Enter Contact Mobile Number</string>
    <string name="entercontactemailid">Please Enter Contact Email ID</string>
    <string name="enter_city_msg">City can\'t be blank.</string>
    <string name="enter_dealer_msg">Dealer can\'t be blank.</string>
    <string name="validcityordealer">Please Enter Valid City or Dealer Name</string>
    <string name="enter_dealer_code">Store Code</string>
    <string name="paymentMode">Mode of payments</string>
    <string name="enter_dealer_name">Store Name</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="chequeDate">Cheque Date</string>
    <string name="chequeNo">Cheque Number</string>
    <string name="ddDate">Demond Draft Date</string>
    <string name="ddNo">Demond Draft No</string>
    <string name="transactionId">Transaction ID</string>
    <string name="transactionDate">Transaction Date</string>
    <string name="msg_payment_mode">Please select mode of payment.</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="product">Product</string>
    <string name="qty">Qty.</string>
    <string name="dpvalue">DP.Value</string>
    <string name="sr">Sr.</string>
    <string name="description">Description</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="exit">Exit</string>
    <string name="view_more">View More</string>
    <string name="eol_max_support">Max Support</string>
    <string name="eol_support_per_unit">Support per Unit</string>
    <string name="eol_product_name">Product Name</string>
    <string name="bill_no">Bill No.</string>
</resources>