<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/pastel_gray"
    android:stretchColumns="0,1" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <TextView
            style="@style/user_profile_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight=".1"
            android:text="@string/sr"
            android:textColor="@color/customblue" />

        <TextView
            style="@style/user_profile_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight=".4"
            android:text="@string/product"
            android:textColor="@color/customblue" />

        <TextView
            style="@style/user_profile_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_weight=".2"
            android:text="@string/qty"
            android:textColor="@color/customblue" />

        <TextView
            style="@style/user_profile_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_weight=".3"
            android:text="@string/dpvalue"
            android:textColor="@color/customblue" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <TextView
            android:id="@+id/sredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="5dp"
            android:layout_weight=".1"
            android:textColor="@color/text_color"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/productedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_weight=".4"
            android:textColor="@color/text_color"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/qtyedit"
            style="@style/edit_field_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_weight=".2"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/valueedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_marginLeft="5dp"
            android:layout_weight=".3"
            android:textColor="@color/text_color"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/editok"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonblue"
            android:gravity="center"
            android:text="@string/ok"
           android:textColor="@drawable/button_text_color_selector"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editcancel"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/buttonblue"
            android:gravity="center"
            android:text="@string/cancel"
           android:textColor="@drawable/button_text_color_selector"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>