<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_actionButtonLayout_eolNotification"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_tabelHeader_eolNotifcation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/table_header_color"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/eol_product_name"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eol_max_support"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eol_support_per_unit"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" >
                </TextView>
            </LinearLayout>

            <ListView
                android:id="@+id/lv_product_eolNotification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_actionButtonLayout_eolNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1" >

        <Button
            android:id="@+id/exit_eolNotification"
            style="@style/button_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:onClick="onExitClick"
            android:padding="6dp"
            android:text="@string/exit" />

        <Button
            android:id="@+id/viewMore_eolNotification"
            style="@style/button_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:onClick="onViewMoreClick"
            android:padding="6dp"
            android:text="@string/view_more" />
    </LinearLayout>

</RelativeLayout>