<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:clickable="true"
    android:padding="@dimen/margin_10" >

    <TextView
        android:id="@+id/bill_no_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_widthPercent="20%"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/bill_no"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/bill_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_toEndOf="@+id/bill_no_textview"
        android:layout_toRightOf="@+id/bill_no_textview"
        app:layout_widthPercent="20%"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/description"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/bill_amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_toEndOf="@+id/bill_description_textview"
        android:layout_toRightOf="@+id/bill_description_textview"
        app:layout_widthPercent="20%"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/amount"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size" />

    <LinearLayout
        android:id="@+id/bill_documents_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_toEndOf="@+id/bill_amount_textview"
        android:layout_toRightOf="@+id/bill_amount_textview"
        app:layout_widthPercent="10%"
        android:clickable="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bill_documents_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/view_document_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/bill_documents_layout"
        android:layout_toRightOf="@+id/bill_documents_layout"
        app:layout_widthPercent="20%"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:text="01 JAN"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size" />

</android.support.percent.PercentRelativeLayout>