<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:smartdost="http://schemas.android.com/apk/res/com.samsung.ssc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <com.samsung.ssc.CustomUI.SSCActionBar
        android:id="@+id/sDActionBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--
         <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/butonlayout"
        android:layout_below="@+id/sDActionBar1"
        android:layout_centerHorizontal="true"
        android:divider="#d9dde9"
        android:dividerHeight="1dp"
         />
    -->

    <com.samsung.ssc.CustomUI.ExtendedListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butonlayout"
        android:layout_below="@+id/sDActionBar1"
        android:layout_centerHorizontal="true"
        android:divider="#d9dde9"
        android:cacheColorHint="@android:color/transparent"
        android:dividerHeight="1dp"
        smartdost:scrollBarPanel="@layout/scrollbarpanel"
        smartdost:scrollBarPanelInAnimation="@anim/in"
        smartdost:scrollBarPanelOutAnimation="@anim/out" />

    <TableRow
        android:id="@id/butonlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="visible" >

        <com.samsung.ssc.CustomUI.SSCButton
            android:id="@+id/approveBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            android:background="@drawable/buttonblue"
            android:padding="10dp"
            android:text="@string/approve"
            android:textColor="@drawable/button_text_color_selector"
            android:textSize="@dimen/text_size_smaller"
            smartdost:buttonFontType="roboto_medium" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#009ee8" />

        <com.samsung.ssc.CustomUI.SSCButton
            android:id="@+id/rejectBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="@drawable/buttonblue"
            android:text="@string/reject"
            android:textColor="@drawable/button_text_color_selector"
            android:textSize="@dimen/text_size_smaller"
            smartdost:buttonFontType="roboto_medium" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#009ee8" />

        <com.samsung.ssc.CustomUI.SSCButton
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_weight="1"
            android:background="@drawable/buttonblue"
            android:text="@string/cancel"
            android:textColor="@drawable/button_text_color_selector"
            android:textSize="@dimen/text_size_smaller"
            smartdost:buttonFontType="roboto_medium" />
    </TableRow>

</RelativeLayout>